--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <section id="sobre" class="section-sobre" >
             <h2>Conheça mais sobre mim</h2>
-            <p> Olá, me chamo Karla Renata, estou no segundo semestre em Ciências da Computação, na Faculdade Estácio, em Salvador - Ba. Tenho conhecimento em HTML, CSS, JavaScript. Estou me aprofundando em Python e banco de dados nesse momento. Estou cada vez mais empolgada e interessada na área, pois abrange basicamente todas as coisas que eu gosto: tecnologia, resolução de problemas e criatividade. 
+            <p> Olá, me chamo Karla Renata, estou no terceiro semestre em Ciências da Computação, na Faculdade Estácio, em Salvador - Ba. Tenho conhecimento em HTML, CSS, JavaScript. Estou me aprofundando em Python e banco de dados nesse momento. Estou cada vez mais empolgada e interessada na área, pois abrange basicamente todas as coisas que eu gosto: tecnologia, resolução de problemas e criatividade. 
             </p>
 
         </section>
