--- a/index.html
+++ b/index.html
@@ -1,90 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karla Renata | Portfólio</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="estilo/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="estilo/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="estilo/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="estilo/mobile.css">
-    <link rel="stylesheet" href="estilo/style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Karla Renata | Portfólio</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="estilo/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="estilo/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="estilo/favicon_io/favicon-16x16.png">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="estilo/mobile.css">
+        <link rel="stylesheet" href="estilo/style.css">
+    </head>
+    <body onresize="mudouTamanho()"> 
+        <header>
+                <nav>
+                    <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+                    <ul class="menu" id="items">
+                        <li class="menu-list">
+                            <a class="menu-link" href="#" onclick="scrollToSection('home')">Home</a>
+                        </li>
+                        <li class="menu-list">
+                            <a class="menu-link" href="#" onclick="scrollToSection('sobre')">Sobre mim</a>
+                        </li>
+                        <li class="menu-list">
+                            <a class="menu-link" href="#" onclick="scrollToSection('projetos')">Projetos</a>
+                        </li>
+                        <li class="menu-list">
+                            <a class="menu-link" href="#" onclick="scrollToSection('habilidades')">Habilidades</a>
+                        </li>
+                        <li class="menu-list">
+                            <a class="menu-link" onclick="scrollToSection('contato')">Contato</a>
+                        </li>
+                    </ul>
+                </nav>
+        </header>
+        <main>
+            <section id="home" class="section-home">
+                <div>
+                    <img id="foto-sobre" src="imagens/foto-sobre.jpg" alt="foto perfil">
+                </div>
+                <div class="sobre"> 
+                    <h1>Karla Renata</h1>
+                    <p>Desenvolvedora Web</p>
+                    <button onclick="scrollToSection('sobre')" id="saiba-mais">Saiba mais</button>
+                </div>
+                <button class="btn-download">
+                    <a href="arquivos/curriculo-karlarenatadev.pdf" download="curriculo-karlarenatadev.pdf" type="application/pdf"><span class="btn-text">Download</span><i class="bi bi-cloud-download"><span class="material-symbols-outlined">download</span></i></a>
+                </button>
+            </section>
+            <section id="sobre" class="section-sobre" >
+                <h2>Conheça mais sobre mim</h2>
+                <p> Olá, me chamo Karla Renata, estou cursando Ciências da Computação, na Faculdade Estácio, em Salvador - Ba. Tenho conhecimento em HTML, CSS, JavaScript. Estou me aprofundando em Python e banco de dados nesse momento. Estou cada vez mais empolgada e interessada na área, pois abrange basicamente todas as coisas que eu gosto: tecnologia, resolução de problemas e criatividade. 
+                </p>
 
-</head>
-<body onresize="mudouTamanho()"> 
-    <header>
-            <nav>
-                <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-                <ul class="menu" id="items">
-                    <li class="menu-list">
-                        <a class="menu-link" href="#" onclick="scrollToSection('home')">Home</a>
-                    </li>
-                    <li class="menu-list">
-                        <a class="menu-link" href="#" onclick="scrollToSection('sobre')">Sobre mim</a>
-                    </li>
-                    <li class="menu-list">
-                        <a class="menu-link" href="#" onclick="scrollToSection('projetos')">Projetos</a>
-                    </li>
-                    <li class="menu-list">
-                        <a class="menu-link" href="#" onclick="scrollToSection('habilidades')">Habilidades</a>
-                    </li>
-                    <li class="menu-list">
-                        <a class="menu-link" onclick="scrollToSection('contato')">Contato</a>
-                    </li>
-                </ul>
-            </nav>
-    </header>
-    <main>
-        <section id="home" class="section-home">
-            <div>
-                <img id="foto-sobre" src="imagens/foto-sobre.jpg" alt="foto perfil">
-            </div>
-            <div class="sobre"> 
-                <h1>Karla Renata</h1>
-                <p>Desenvolvedora Web</p>
-                <button onclick="scrollToSection('sobre')" id="saiba-mais">Saiba mais</button>
-            </div>
-            <button class="btn-download">
-                <a href="arquivos/curriculo-karlarenatadev.pdf" download="curriculo-karlarenatadev.pdf" type="application/pdf"><span class="btn-text">Download</span><i class="bi bi-cloud-download"><span class="material-symbols-outlined">download</span></i></a>
-            </button>
-        </section>
-        <section id="sobre" class="section-sobre" >
-            <h2>Conheça mais sobre mim</h2>
-            <p> Olá, me chamo Karla Renata, estou no terceiro semestre em Ciências da Computação, na Faculdade Estácio, em Salvador - Ba. Tenho conhecimento em HTML, CSS, JavaScript. Estou me aprofundando em Python e banco de dados nesse momento. Estou cada vez mais empolgada e interessada na área, pois abrange basicamente todas as coisas que eu gosto: tecnologia, resolução de problemas e criatividade. 
-            </p>
-
-        </section>
-        <section  id="projetos" class="section-projects">
-            <h2>Projetos</h2>
-            <ul class="projetos">
-                <li class="item"><img src="imagens/projeto-minhas-redes.png" alt="projeto-minhas-redes"><br><a href="https://karlarenatadev.github.io/minhas-redes/" target="_blank" rel="external">Redes sociais</a></li>
-                <li class="item"><img src="imagens/projeto-formulario.png" alt="projeto-formulario"><br><a href="https://karlarenatadev.github.io/formulario-basico/" target="_blank" rel="external">Formulário</a></li>
-                <li class="item"><img src="imagens/projeto-login.png" alt="projeto-login" class="imagem-responsiva"><br><a href="https://karlarenatadev.github.io/projeto-login/" target="_blank" rel="external">Tela de login</a></li>
-        </section>
-        <section id="habilidades" class="section-habilidades">
-            <h2>Habilidades</h2>
-            <ul>
-                <li><span class="material-symbols-outlined">html</span>HTML</li>
-                <li><span class="material-symbols-outlined">css</span>CSS</li>
-                <li><span class="material-symbols-outlined">javascript</span>JavaScript</li>
-                <li>Github</li>
-            </ul>
-        </section>
-        <section id="contato" class="section-contact">
-            <h2>Contato</h2>
-            <div class="contato">
+            </section>
+            <section  id="projetos" class="section-projects">
+                <h2>Projetos</h2>
+                <ul class="projetos">
+                    <li class="item"><img src="imagens/projeto-minhas-redes.png" alt="projeto-minhas-redes"><br><a href="https://karlarenatadev.github.io/minhas-redes/" target="_blank" rel="external">Redes sociais</a></li>
+                    <li class="item"><img src="imagens/projeto-formulario.png" alt="projeto-formulario"><br><a href="https://karlarenatadev.github.io/formulario-basico/" target="_blank" rel="external">Formulário</a></li>
+                    <li class="item"><img src="imagens/projeto-login.png" alt="projeto-login" class="imagem-responsiva"><br><a href="https://karlarenatadev.github.io/projeto-login/" target="_blank" rel="external">Tela de login</a></li>
+            </section>
+            <section id="habilidades" class="section-habilidades">
+                <h2>Habilidades</h2>
                 <ul>
-                    <li class="contato-lista"><span class="material-symbols-outlined">mail</span>E-mail: <a href="mailto:renatakarla663@gmail.com" target="_blank" rel="external"> renatakarla663@gmail.com</a></li>
-                    <li class="contato-lista"><img src="imagens/icone-linkedin.png" alt="linkedin"> Linkedin: <a class="contato-link" href="https://www.linkedin.com/in/karlarenata-rosario/" target="_blank" rel="external">/karlarenata-rosario/</a></li>
-                    <li class="contato-lista"><img src="imagens/icone-github.png" alt="github"> Github: <a class="contato-link" href="https://github.com/karlarenatadev" target="_blank" rel="external">/karlarenatadev</a></li>
-                    <li><span class="material-symbols-outlined">location_on</span>Salvador - Ba</li>
+                    <li><span class="material-symbols-outlined">html</span>HTML</li>
+                    <li><span class="material-symbols-outlined">css</span>CSS</li>
+                    <li><span class="material-symbols-outlined">javascript</span>JavaScript</li>
+                    <li>Github</li>
                 </ul>
-                <div><img src="imagens/perfil.png" alt="Foto de perfil" class="foto"></div>
-            </div>
-        </section>
-    </main>
-    <script src="scripts.js"></script>
-</body>
+            </section>
+            <section id="contato" class="section-contact">
+                <h2>Contato</h2>
+                <div class="contato">
+                    <ul>
+                        <li class="contato-lista"><span class="material-symbols-outlined">mail</span>E-mail: <a href="mailto:renatakarla663@gmail.com" target="_blank" rel="external"> renatakarla663@gmail.com</a></li>
+                        <li class="contato-lista"><img src="imagens/icone-linkedin.png" alt="linkedin"> Linkedin: <a class="contato-link" href="https://www.linkedin.com/in/karlarenata-rosario/" target="_blank" rel="external">/karlarenata-rosario/</a></li>
+                        <li class="contato-lista"><img src="imagens/icone-github.png" alt="github"> Github: <a class="contato-link" href="https://github.com/karlarenatadev" target="_blank" rel="external">/karlarenatadev</a></li>
+                        <li><span class="material-symbols-outlined">location_on</span>Salvador - Ba</li>
+                    </ul>
+                    <div><img src="imagens/perfil.png" alt="Foto de perfil" class="foto"></div>
+                </div>
+            </section>
+        </main>
+        <script src="scripts.js"></script>
+    </body>
 </html>
