--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </section>
             <section id="sobre" class="section-sobre" >
                 <h2>Conheça mais sobre mim</h2>
-                <p> Olá, me chamo Karla Renata, estou cursando Ciências da Computação, na Faculdade Estácio, em Salvador - Ba. Tenho conhecimento em HTML, CSS, JavaScript. Estou me aprofundando em Python e banco de dados nesse momento. Estou cada vez mais empolgada e interessada na área, pois abrange basicamente todas as coisas que eu gosto: tecnologia, resolução de problemas e criatividade. 
+                <p></p> Olá, me chamo Karla Renata e sou estudante de Ciências da Computação na Faculdade Estácio, em Salvador – BA. Tenho conhecimentos em HTML, CSS e JavaScript, e atualmente estou me aprofundando em Python e bancos de dados. Tenho me sentido cada vez mais motivada e envolvida com a área de tecnologia, pois ela reúne tudo o que mais me inspira: resolução de problemas, inovação e criatividade.
                 </p>
 
             </section>
